# lutningsgrad

./: .gitignore  README.md  download_example_data.sh  meson.build
examples/: main.cpp  meson.build
lutningsgrad/: meson.build  tensor.cpp  tensor.hpp
nanograd/: meson.build  opencl.h  tensor.cpp
src/: main.cpp  ops.cpp  ops.hpp  tensor.cpp  tensor.hpp
test/: meson.build  unit_tensor.cpp
utils/: meson.build  misc.cpp  misc.hpp  mnist.cpp  mnist.hpp
